feat (transfer) GET users transfer, with pagination done. Also improved auth & removed prints
